--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    upload_directory_artistPhoto: '%kernel.project_dir%/public/uploads/artistPhoto/'
+    upload_directory_artwork: '%kernel.project_dir%/public/uploads/artwork/'
+    upload_directory_news: '%kernel.project_dir%/public/uploads/news/'
 services:
     # default configuration for services in *this* file
     _defaults:
