--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,6 +10,9 @@ security:
                 class: App\Entity\Admin
                 property: email
         # used to reload user from session & other features (e.g. switch_user)
+        # used to reload user from session & other features (e.g. switch_user)
+        # used to reload user from session & other features (e.g. switch_user)
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
