Securisation des  mots de passe

--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,6 +1,7 @@
 framework:
     default_locale: en
     translator:
+        logging : false
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
             - en
