--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,8 @@ security:
                 enable_csrf: true
             logout:
                 path: /logout
+            login_throttling:
+                max_attempts: 3
             # custom_authenticator: App\Security\LoginAuthentificatorAuthenticator
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -42,7 +44,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/dashboard/edit, roles: ROLE_USER }
+        # - { path: ^/user, roles: ROLE_USER }
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
