--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,8 @@ security:
                 enable_csrf: true
             logout:
                 path: /logout
+            login_throttling:
+                max_attempts: 3
             # custom_authenticator: App\Security\LoginAuthentificatorAuthenticator
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -44,7 +46,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/dashboard/edit, roles: ROLE_USER }
+        # - { path: ^/user, roles: ROLE_USER }
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_ARTIST:      [ROLE_USER]
