--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,8 +7,9 @@ parameters:
     upload_directory_artistPhoto: '%kernel.project_dir%/public/uploads/images/artistPhoto/'
     upload_directory_artwork: '%kernel.project_dir%/public/uploads/artwork/'
     upload_directory_news: '%kernel.project_dir%/public/uploads/news/'
-    mailer_from: '%env(resole:MAILER_FROM_ADRESS)%'
-services:        
+    mailer_from: '%env(resolve:MAILER_FROM_ADDRESS)%'
+services:  
+    # SymfonyCasts\Bundle\ResetPassword\ResetPasswordHelperInterface: '@reset_password.helper'      
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
