--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         App\Entity\User: 'auto'
@@ -6,6 +7,8 @@ security:
         algorithm: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
+        oauth:
+            id: knpu.oauth2.user_provider
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
@@ -26,12 +29,15 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
-
                 always_use_default_target_path: true
                 username_parameter: 'email'
                 password_parameter: 'password'
-
                 enable_csrf: true
+
+            custom_authenticators:
+                - App\Security\MyFacebookAuthenticator
+            entry_point: "form_login"
+
             logout:
                 path: /logout
             # custom_authenticator: App\Security\LoginAuthentificatorAuthenticator
