--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,7 +52,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/user, roles: ROLE_USER }
+        # - { path: ^/user, roles: ROLE_USER }
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_ARTIST:      [ROLE_USER]
