--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/user, roles: ROLE_USER }
+          - { path: ^/expo, roles: ROLE_ARTIST }
+          
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_ARTIST:      [ROLE_USER]
