expo coté admin/ artist et user , début de news

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,6 +52,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/expo/edit, roles: ROLE_ARTIST }
+        - { path: ^/expo/delete, roles: ROLE_ARTIST }
         # - { path: ^/user, roles: ROLE_USER }
     role_hierarchy:
         ROLE_ARTIST:      ROLE_USER
